--- a/css/registration.css
+++ b/css/registration.css
@@ -12,7 +12,7 @@ a {
 
 .wrap {
     background: #F2F2F2;
-    padding-top: 150px;
+    padding-top: 100px;
     min-height: 100vh;
 }
 
@@ -25,6 +25,7 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(63, 63, 68, 0.15), 0 0 0 rgba(63, 63, 68, 0.05);
 }
 
 .registration-box {
