--- a/css/registration.css
+++ b/css/registration.css
@@ -104,6 +104,10 @@ a {
     margin-bottom: 16px;
 }
 
+.registration-input::placeholder {
+    color: #000;
+}
+
 .registration-input:focus {
     outline: none;
     border: 2px solid #1665D8;
